# Frieren

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  LLM_TOOL_REFACTOR_PLAN.md  PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION.md  PHASE5_IMPLEMENTATION.md  PHASE6_IMPLEMENTATION.md  PHASE7_IMPLEMENTATION.md  PHASE8_IMPLEMENTATION.md  PLAN.md  PLUGIN_SYSTEM_REFACTOR_PLAN.md  README.md  REFACTOR_PLAN.md  docker-compose.yml  ecosystem.config.json  pyproject.toml
.github/workflows/: ci.yml
config/: bot.toml  frieren.md  performance_baseline.json
config/prompts/: behavior.md  fact_extractor.md  identity.md  manifest.toml  memory_policy.md  qq_context.md  response_style.md  summarizer.md  task_planner.md  tool_policy.md
instances/frieren/: bot.toml
plugins/: action_queue.py  echo.py  essence.py  filter.py  history.py  llm_artifact_tools.py  llm_capability_tools.py  llm_control_tools.py  llm_core.py  llm_gate.py  llm_memory.py  llm_sandbox_tools.py  llm_schedule_tools.py  llm_sender.py  llm_tools.py  ping.py  poke.py  repeater.py  sticker_react.py
plugins/echo/: __init__.py  plugin.py  plugin.toml
plugins/essence/: __init__.py  plugin.py  plugin.toml
plugins/history/: __init__.py  plugin.py  plugin.toml
plugins/llm_core/: __init__.py  plugin.py  plugin.toml
plugins/llm_gate/: __init__.py  plugin.py  plugin.toml
plugins/llm_sender/: __init__.py  plugin.py  plugin.toml
plugins/ping/: __init__.py  plugin.py  plugin.toml
plugins/poke/: __init__.py  plugin.py  plugin.toml
plugins/repeater/: __init__.py  plugin.py  plugin.toml
plugins/sticker_react/: __init__.py  plugin.py  plugin.toml
scripts/: backup.sh  benchmark.py  deploy.sh  run.sh  run_e2e.py  start.sh
src/: healthcheck.py  main.py
tests/: conftest.py  conftest_e2e.py  e2e_harness.py  factories.py  restart_worker.py  test_action_middleware.py  test_action_queue.py  test_api_client.py  test_artifact_service.py  test_artifact_store.py  test_artifact_tools.py  test_base.py  test_bot.py  test_bot_lifecycle.py  test_bus_integration.py  test_capability_tools.py  test_cli.py  test_command_registry.py  test_config.py  test_config_center.py  test_control_plane.py  test_coordinator.py  test_decorators.py  test_definition.py  test_deployer.py  test_docker_contract.py  test_durable_runtime.py  test_e2e_errors.py  test_e2e_filters.py  test_e2e_llm_chain.py  test_e2e_multiturn.py  test_e2e_pipeline.py  test_e2e_restart.py  test_e2e_runtime.py  test_e2e_scenarios.py  test_e2e_tools.py  test_echo.py  test_essence.py  test_event_bus.py  test_filter.py  (+56 more)
(+96 files in other folders)
