[project]
name = "qqbot"
version = "0.1.0"
description = "QQ bot powered by NapCatQQ with custom plugin system"
requires-python = ">=3.12"
dependencies = [
    "napcat-sdk>=0.1.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.0.0",
    "httpx>=0.28.0",
    "docker>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests that do not require I/O",
    "integration: Tests that require multiple components",
    "slow: Tests that take > 1 second",
    "llm: Tests that exercise the LLM pipeline",
]

[tool.coverage.run]
source = ["src", "plugins"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
